[package]
name = "decoder"
version = "0.1.0"
authors = ["leo <coderleo42+leocodes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
log = "0.4.11"
env_logger = "0.7.0"
pretty_env_logger = "0.4.0"
pretty-hex = "0.2.1"
libdecoder = { path = "../libdecoder" }